[tool.poetry]
name = "openrelik-worker-floss"
version = "0.1.0"
description = "Worker to run FLARE Obfuscated String Solver"
authors = ["Juan Leaniz <juan.leaniz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = { extras = ["redis"], version = "^5.4.0" }
openrelik-worker-common = "^0.12.0"
flare-floss = "^3.1.1"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-env = "*"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-celery = "*"

[tool.pytest.ini_options]
env = [
    "REDIS_URL=redis://localhost:6379/0",
    # The following are also good to set for consistency if pytest-celery or other parts of your tests might need them.
    "CELERY_BROKER_URL=redis://localhost:6379/0",
    "CELERY_RESULT_BACKEND=redis://localhost:6379/0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
